--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Hookah</title>
   <link rel="shortcut icon" href="src/images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="dist/main.min.css">
-  <link rel="stylesheet/less" href="src/css/adaptive.less">
+<!--  <link rel="stylesheet/less" href="src/css/adaptive.less">-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -20,17 +20,7 @@
     </div>
   </div>
 
-  <div class="burger" id="burger">
-    <svg enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512"
-         xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="m464.883 64.267h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/>
-      <path
-        d="m464.883 208.867h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/>
-      <path
-        d="m464.883 353.467h-417.766c-25.98 0-47.117 21.137-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.012-21.137-47.149-47.117-47.149z"/>
-    </svg>
-  </div>
+
 
   <nav class="header-navigation animate__animated wow animate__backInLeft" id="header_navigation">
     <div class="header-navigation_close">
@@ -79,6 +69,17 @@
     </div>
   </div>
 
+  <div class="burger" id="burger">
+    <svg enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512"
+         xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="m464.883 64.267h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/>
+      <path
+        d="m464.883 208.867h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/>
+      <path
+        d="m464.883 353.467h-417.766c-25.98 0-47.117 21.137-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.012-21.137-47.149-47.117-47.149z"/>
+    </svg>
+  </div>
 </header>
 
 <section class="info " id="about">
