Change from google map to yandex map

--- a/index.html
+++ b/index.html
@@ -566,10 +566,15 @@
     <h2 class="location-title animate__animated wow animate__backInLeft"> Где мы находимся?</h2>
     <div class="location-content">
       <div class="animate__animated wow animate__backInLeft">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.589773571357!2d37.538905330145255!3d55.7482563693671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54bdcf5a16129%3A0xd7fa277c11b7741e!2sCitySmoke!5e0!3m2!1sru!2sby!4v1689095659346!5m2!1sru!2sby"
-          width="635" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div style="position:relative;overflow:hidden;"><a
+          href="https://yandex.by/maps/org/hookah_morris/175627329767/?utm_medium=mapframe&utm_source=maps"
+          style="color:#eee;font-size:12px;position:absolute;top:0px;">Hookah Morris</a><a
+          href="https://yandex.by/maps/10275/polotsk/category/hookah_lounge/34866769160/?utm_medium=mapframe&utm_source=maps"
+          style="color:#eee;font-size:12px;position:absolute;top:14px;">Кальян-бар в Полоцке</a>
+          <iframe
+            src="https://yandex.by/map-widget/v1/?ll=28.776722%2C55.483260&mode=search&oid=175627329767&ol=biz&z=17.1"
+            width="635" height="360" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+        </div>
       </div>
       <div class="location-info animate__animated wow animate__backInRight">
         <div>
