Edit buttons in main document

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         </div>
       </div>
       <div class="footer-right_group animate__animated wow animate__backInRight">
-        <nav class="btn footer-btn"><a href="#reserve">Забронировать</a></nav>
+        <button class="btn footer-btn"><a href="#reserve">Забронировать</a></button>
         <div class="phone">
           <img src="src/images/phone-call.png" alt="phone-call">
           <div>
