Edit menu block from flex to grid

--- a/index.html
+++ b/index.html
@@ -72,14 +72,10 @@
     </div>
 
     <div class="burger" id="burger">
-      <svg enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512"
-           xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="m464.883 64.267h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/>
-        <path
-          d="m464.883 208.867h-417.766c-25.98 0-47.117 21.136-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.013-21.137-47.149-47.117-47.149z"/>
-        <path
-          d="m464.883 353.467h-417.766c-25.98 0-47.117 21.137-47.117 47.149 0 25.98 21.137 47.117 47.117 47.117h417.766c25.98 0 47.117-21.137 47.117-47.117 0-26.012-21.137-47.149-47.117-47.149z"/>
+      <svg viewBox="0 0 100 80" width="30" height="30">
+        <rect width="100" height="10"></rect>
+        <rect y="30" width="100" height="10"></rect>
+        <rect y="60" width="100" height="10"></rect>
       </svg>
     </div>
   </header>
@@ -120,18 +116,6 @@
             и вкусы, так и самые актуальные и крафтовые новинки со всего мира.</p>
         </div>
       </div>
-      <div class="card-3">
-        <div>
-          <h2>Отдельные VIP-комнаты</h2>
-          <p>Для больших компаний есть комфортные VIP-комнаты, где каждый сможет отметить свой праздник или просто
-            хорошо
-            отдохнуть.</p>
-        </div>
-        <img src="src/images/card-2.png" alt="card">
-      </div>
-    </div>
-    <div class="cards animate__animated wow animate__backInRight">
-
       <div class="card-2">
         <div>
           <h2>Дискотеки каждую субботу</h2>
@@ -141,12 +125,24 @@
         <img class="card-3_1" src="src/images/card-3.png" alt="card">
         <img class="card-3_2" src="src/images/card-3_2.png" alt="card">
       </div>
+<!--    </div>-->
+<!--    <div class="cards animate__animated wow animate__backInRight">-->
+      <div class="card-3">
+        <div>
+          <h2>Отдельные VIP-комнаты</h2>
+          <p>Для больших компаний есть комфортные VIP-комнаты, где каждый сможет отметить свой праздник или просто
+            хорошо
+            отдохнуть.</p>
+        </div>
+        <img src="src/images/card-2.png" alt="card">
+      </div>
       <div class="card-4">
         <h2>А еще...</h2>
         <p>Элитные сорта чая, авторские коктейли и лучшие настольные и видео-игры.
         </p>
       </div>
     </div>
+
   </section>
 
   <section class="masters animate__animated wow animate__backInLeft">
@@ -565,7 +561,7 @@
   <section class="location " id="contacts">
     <h2 class="location-title animate__animated wow animate__backInLeft"> Где мы находимся?</h2>
     <div class="location-content">
-      <div class="animate__animated wow animate__backInLeft">
+      <div class="map animate__animated wow animate__backInLeft">
         <div style="position:relative;overflow:hidden;"><a
           href="https://yandex.by/maps/org/hookah_morris/175627329767/?utm_medium=mapframe&utm_source=maps"
           style="color:#eee;font-size:12px;position:absolute;top:0px;">Hookah Morris</a><a
