Edit error placeholders in input

--- a/index.html
+++ b/index.html
@@ -104,46 +104,46 @@
     </div>
   </section>
 
-  <section class="advantages">
+<!--  <section class="advantages">-->
 
 
-    <div class="cards animate__animated wow animate__backInLeft">
-      <div class="card-1">
-        <img src="src/images/card-1.png" alt="card">
-        <div>
-          <h2>Лучшие вкусы табака</h2>
-          <p>В нашем ассортименте представлены как эталонные бренды
-            и вкусы, так и самые актуальные и крафтовые новинки со всего мира.</p>
-        </div>
-      </div>
-      <div class="card-2">
-        <div>
-          <h2>Дискотеки каждую субботу</h2>
-          <p>По субботам спокойствие и размеренность уходят
-            на второй план, ведь начиная с 20:00 за пульты встают наши диджеи и начинаются веселые танцы.</p>
-        </div>
-        <img class="card-3_1" src="src/images/card-3.png" alt="card">
-        <img class="card-3_2" src="src/images/card-3_2.png" alt="card">
-      </div>
+<!--    <div class="cards animate__animated wow animate__backInLeft">-->
+<!--      <div class="card-1">-->
+<!--        <img src="src/images/card-1.png" alt="card">-->
+<!--        <div>-->
+<!--          <h2>Лучшие вкусы табака</h2>-->
+<!--          <p>В нашем ассортименте представлены как эталонные бренды-->
+<!--            и вкусы, так и самые актуальные и крафтовые новинки со всего мира.</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="card-2">-->
+<!--        <div>-->
+<!--          <h2>Дискотеки каждую субботу</h2>-->
+<!--          <p>По субботам спокойствие и размеренность уходят-->
+<!--            на второй план, ведь начиная с 20:00 за пульты встают наши диджеи и начинаются веселые танцы.</p>-->
+<!--        </div>-->
+<!--        <img class="card-3_1" src="src/images/card-3.png" alt="card">-->
+<!--        <img class="card-3_2" src="src/images/card-3_2.png" alt="card">-->
+<!--      </div>-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="cards animate__animated wow animate__backInRight">&ndash;&gt;-->
+<!--      <div class="card-3">-->
+<!--        <div>-->
+<!--          <h2>Отдельные VIP-комнаты</h2>-->
+<!--          <p>Для больших компаний есть комфортные VIP-комнаты, где каждый сможет отметить свой праздник или просто-->
+<!--            хорошо-->
+<!--            отдохнуть.</p>-->
+<!--        </div>-->
+<!--        <img src="src/images/card-2.png" alt="card">-->
+<!--      </div>-->
+<!--      <div class="card-4">-->
+<!--        <h2>А еще...</h2>-->
+<!--        <p>Элитные сорта чая, авторские коктейли и лучшие настольные и видео-игры.-->
+<!--        </p>-->
+<!--      </div>-->
 <!--    </div>-->
-<!--    <div class="cards animate__animated wow animate__backInRight">-->
-      <div class="card-3">
-        <div>
-          <h2>Отдельные VIP-комнаты</h2>
-          <p>Для больших компаний есть комфортные VIP-комнаты, где каждый сможет отметить свой праздник или просто
-            хорошо
-            отдохнуть.</p>
-        </div>
-        <img src="src/images/card-2.png" alt="card">
-      </div>
-      <div class="card-4">
-        <h2>А еще...</h2>
-        <p>Элитные сорта чая, авторские коктейли и лучшие настольные и видео-игры.
-        </p>
-      </div>
-    </div>
 
-  </section>
+<!--  </section>-->
 
   <section class="masters animate__animated wow animate__backInLeft">
     <h1>Наши мастера</h1>
@@ -542,10 +542,10 @@
       <div class="order" id="order">
         <h2>Забронируйте столик или VIP-комнату
           прямо сейчас!</h2>
-        <input type="text" class="booking-input" id="name_input" placeholder="Ваше имя">
-        <div class="text-error">Введите ваше имя!</div>
-        <input type="text" class="booking-input" id="phone_input" placeholder="Ваш телефон">
-        <div class="text-error">Введите ваш телефон!</div>
+        <input type="text" class="booking-input" id="name_input">
+<!--        <div class="text-error">Введите ваше имя!</div>-->
+        <input type="text" class="booking-input" id="phone_input">
+<!--        <div class="text-error">Введите ваш телефон!</div>-->
         <button class="btn booking-btn" id="booking_btn">Забронировать</button>
         <div class="booking-info">*В течении 15 минут наш администратор свяжется
           с вами, чтобы подтвердить бронь стола или комнаты.
@@ -607,16 +607,16 @@
     </div>
   </section>
 
-  <footer class="footer ">
+  <footer class="footer">
     <div class="footer-content">
-      <div class="logo animate__animated wow animate__backInLeft">
+      <div class="logo">
         <img src="src/images/logo.png">
         <div class="logo-text">
           Smoke City
           <span>hookah bar</span>
         </div>
       </div>
-      <div class="footer-right_group animate__animated wow animate__backInRight">
+      <div class="footer-right_group ">
         <button class="btn footer-btn"><a href="#reserve">Забронировать</a></button>
         <div class="phone">
           <img src="src/images/phone-call.png" alt="phone-call">
