Edit margins and many else

--- a/index.html
+++ b/index.html
@@ -104,46 +104,49 @@
     </div>
   </section>
 
-<!--  <section class="advantages">-->
+  <section class="advantages">
 
 
-<!--    <div class="cards animate__animated wow animate__backInLeft">-->
-<!--      <div class="card-1">-->
-<!--        <img src="src/images/card-1.png" alt="card">-->
-<!--        <div>-->
-<!--          <h2>Лучшие вкусы табака</h2>-->
-<!--          <p>В нашем ассортименте представлены как эталонные бренды-->
-<!--            и вкусы, так и самые актуальные и крафтовые новинки со всего мира.</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="card-2">-->
-<!--        <div>-->
-<!--          <h2>Дискотеки каждую субботу</h2>-->
-<!--          <p>По субботам спокойствие и размеренность уходят-->
-<!--            на второй план, ведь начиная с 20:00 за пульты встают наши диджеи и начинаются веселые танцы.</p>-->
-<!--        </div>-->
-<!--        <img class="card-3_1" src="src/images/card-3.png" alt="card">-->
-<!--        <img class="card-3_2" src="src/images/card-3_2.png" alt="card">-->
-<!--      </div>-->
-<!--&lt;!&ndash;    </div>&ndash;&gt;-->
-<!--&lt;!&ndash;    <div class="cards animate__animated wow animate__backInRight">&ndash;&gt;-->
-<!--      <div class="card-3">-->
-<!--        <div>-->
-<!--          <h2>Отдельные VIP-комнаты</h2>-->
-<!--          <p>Для больших компаний есть комфортные VIP-комнаты, где каждый сможет отметить свой праздник или просто-->
-<!--            хорошо-->
-<!--            отдохнуть.</p>-->
-<!--        </div>-->
-<!--        <img src="src/images/card-2.png" alt="card">-->
-<!--      </div>-->
-<!--      <div class="card-4">-->
-<!--        <h2>А еще...</h2>-->
-<!--        <p>Элитные сорта чая, авторские коктейли и лучшие настольные и видео-игры.-->
-<!--        </p>-->
-<!--      </div>-->
+    <div class="cards animate__animated wow animate__backInLeft">
+      <div class="card-1">
+        <img src="src/images/card-1.png" alt="card">
+        <div>
+          <h2>Лучшие вкусы табака</h2>
+          <p>В нашем ассортименте представлены как эталонные бренды
+            и вкусы, так и самые актуальные и крафтовые новинки со всего мира.</p>
+        </div>
+      </div>
+
 <!--    </div>-->
+<!--    <div class="cards animate__animated wow animate__backInRight">-->
+      <div class="card-3">
+        <div>
+          <h2>Отдельные VIP-комнаты</h2>
+          <p>Для больших компаний есть комфортные VIP-комнаты, где каждый сможет отметить свой праздник или просто
+            хорошо
+            отдохнуть.</p>
+        </div>
+        <img src="src/images/card-2.png" alt="card">
+      </div>
 
-<!--  </section>-->
+      <div class="card-2">
+        <div>
+          <h2>Дискотеки каждую субботу</h2>
+          <p>По субботам спокойствие и размеренность уходят
+            на второй план, ведь начиная с 20:00 за пульты встают наши диджеи и начинаются веселые танцы.</p>
+        </div>
+        <img class="card-3_1" src="src/images/card-3.png" alt="card">
+        <img class="card-3_2" src="src/images/card-3_2.png" alt="card">
+      </div>
+
+      <div class="card-4">
+        <h2>А еще...</h2>
+        <p>Элитные сорта чая, авторские коктейли и лучшие настольные и видео-игры.
+        </p>
+      </div>
+    </div>
+
+  </section>
 
   <section class="masters animate__animated wow animate__backInLeft">
     <h1>Наши мастера</h1>
@@ -247,8 +250,9 @@
             до 3 гостей.</p>
           <span>750 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
           <img src="src/images/menu-1.png" alt="">
+          <img src="src/images/menu-1_2.png" alt="">
         </div>
       </div>
       <div class="menu-card">
@@ -260,8 +264,9 @@
           <p> Максимальная длительность курения кальяна - 90 минут.</p>
           <span>1500 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
           <img src="src/images/menu-2.png" alt="">
+          <img src="src/images/menu-2_2.png" alt="">
         </div>
       </div>
       <div class="menu-card">
@@ -273,7 +278,8 @@
           <p>Один перезабив табака и добавки в колбу бесплатно.</p>
           <span>2000 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
+          <img src="src/images/menu-3.png" alt="">
           <img src="src/images/menu-3.png" alt="">
         </div>
       </div>
@@ -303,56 +309,54 @@
       <div class="menu-card">
         <div class="menu-description">
           <h2>Фрукты </h2>
-          <p>Отлично подходит фруктовая тарелка с продуктами, сочетающимися по вкусу с табаком</p>
+          <p>Отлично подходит фруктовая тарелка с продуктами, сочетающимися по вкусу с табаком: бананы, яблоки, дыня, виноград, ананас. </p>
           <span>750 руб.</span>
         </div>
-        <div>
-          <img src="src/images/menu-1.png" alt="">
+        <div class="menu-image">
+          <img src="src/images/menu-zakuski.png" alt="">
+          <img src="src/images/menu-zakuski.png" alt="">
         </div>
       </div>
       <div class="menu-card">
         <div class="menu-description">
-          <h2>Кальян на фрукте</h2>
-          <p>Фрукт на выбор: ананас,
-            грейпфрут,гранат.
-          </p>
-          <p> Максимальная длительность курения кальяна - 90 минут.</p>
+          <h2>Сладости </h2>
+          <p>Восточные сладости: пастила, чурчхела, пахлава, рахат-лукум, халва, щербет, нуга</p>
           <span>1500 руб.</span>
         </div>
-        <div>
-          <img src="src/images/menu-2.png" alt="">
+        <div class="menu-image">
+          <img src="src/images/sladosti.webp" alt="">
+          <img src="src/images/sladosti.webp" alt="">
         </div>
       </div>
       <div class="menu-card">
         <div class="menu-description">
-          <h2>Премиум-кальян</h2>
+          <h2>Шоколад </h2>
           <p>
-            Используется кальян с подсветкой и премиальный табак.
-          </p>
-          <p>Один перезабив табака и добавки в колбу бесплатно.</p>
+            Натуральный и качественный шоколад с большим содержанием какао-бобов.</p>
           <span>2000 руб.</span>
         </div>
-        <div>
-          <img src="src/images/menu-3.png" alt="">
+        <div class="menu-image">
+          <img src="src/images/chokled.png" alt="">
+          <img src="src/images/chokled.png" alt="">
         </div>
       </div>
       <div class="menu-card">
         <div class="menu-description">
-          <h2>Дополнительно</h2>
-          <div class="additives">Добавки в колбу на выбор:
+<!--          <h2>Дополнительно</h2>-->
+<!--          <div class="additives">Добавки в колбу на выбор:-->
 
-            <ul>
-              <li>-молоко</li>
-              <li>-сок</li>
-              <li> -сиропы
-              </li>
-              <li> -ликер
-              </li>
-            </ul>
+<!--            <ul>-->
+<!--              <li>-молоко</li>-->
+<!--              <li>-сок</li>-->
+<!--              <li> -сиропы-->
+<!--              </li>-->
+<!--              <li> -ликер-->
+<!--              </li>-->
+<!--            </ul>-->
 
 
-          </div>
-          <span>200 руб.</span>
+<!--          </div>-->
+<!--          <span>200 руб.</span>-->
 
         </div>
       </div>
@@ -361,14 +365,15 @@
     <div class="menu-cards" id="cards-3">
       <div class="menu-card">
         <div class="menu-description">
-          <h2>3 чаша</h2>
+          <h2>Классическая чаша</h2>
           <p>Табак на выбор (в ассортименте) </p>
           <p>Сессия на классической чаше рассчитана на компанию
             до 3 гостей.</p>
           <span>750 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
           <img src="src/images/menu-1.png" alt="">
+          <img src="src/images/menu-1_2.png" alt="">
         </div>
       </div>
       <div class="menu-card">
@@ -380,8 +385,9 @@
           <p> Максимальная длительность курения кальяна - 90 минут.</p>
           <span>1500 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
           <img src="src/images/menu-2.png" alt="">
+          <img src="src/images/menu-2_2.png" alt="">
         </div>
       </div>
       <div class="menu-card">
@@ -393,7 +399,8 @@
           <p>Один перезабив табака и добавки в колбу бесплатно.</p>
           <span>2000 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
+          <img src="src/images/menu-3.png" alt="">
           <img src="src/images/menu-3.png" alt="">
         </div>
       </div>
@@ -422,14 +429,15 @@
     <div class="menu-cards" id="cards-4">
       <div class="menu-card">
         <div class="menu-description">
-          <h2>4 чаша</h2>
+          <h2>Классическая чаша</h2>
           <p>Табак на выбор (в ассортименте) </p>
           <p>Сессия на классической чаше рассчитана на компанию
             до 3 гостей.</p>
           <span>750 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
           <img src="src/images/menu-1.png" alt="">
+          <img src="src/images/menu-1_2.png" alt="">
         </div>
       </div>
       <div class="menu-card">
@@ -441,8 +449,9 @@
           <p> Максимальная длительность курения кальяна - 90 минут.</p>
           <span>1500 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
           <img src="src/images/menu-2.png" alt="">
+          <img src="src/images/menu-2_2.png" alt="">
         </div>
       </div>
       <div class="menu-card">
@@ -454,7 +463,8 @@
           <p>Один перезабив табака и добавки в колбу бесплатно.</p>
           <span>2000 руб.</span>
         </div>
-        <div>
+        <div class="menu-image">
+          <img src="src/images/menu-3.png" alt="">
           <img src="src/images/menu-3.png" alt="">
         </div>
       </div>
@@ -479,6 +489,7 @@
         </div>
       </div>
     </div>
+
 
   </section>
 
