Add cdn for node libs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <link rel="shortcut icon" href="src/images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="dist/main.min.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+          integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/less"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.8/jquery.inputmask.min.js"
+          integrity="sha512-efAcjYoYT0sXxQRtxGY37CKYmqsFVOIwMApaEbrxJr4RwqVVGw8o+Lfh/+59TU07+suZn1BWq4fDl5fdgyCNkw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
+          integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -126,8 +137,8 @@
         <img class="card-3_2" src="src/images/card-3_2.png" alt="card">
       </div>
 
-<!--    </div>-->
-<!--    <div class="cards animate__animated wow animate__backInRight">-->
+      <!--    </div>-->
+      <!--    <div class="cards animate__animated wow animate__backInRight">-->
       <div class="card-3">
         <div>
           <h2>Отдельные VIP-комнаты</h2>
@@ -137,7 +148,6 @@
         </div>
         <img src="src/images/card-2.png" alt="card">
       </div>
-
 
 
       <div class="card-4">
@@ -310,7 +320,8 @@
       <div class="menu-card">
         <div class="menu-description">
           <h2>Фрукты </h2>
-          <p>Отлично подходит фруктовая тарелка с продуктами, сочетающимися по вкусу с табаком: бананы, яблоки, дыня, виноград, ананас. </p>
+          <p>Отлично подходит фруктовая тарелка с продуктами, сочетающимися по вкусу с табаком: бананы, яблоки, дыня,
+            виноград, ананас. </p>
           <span>750 руб.</span>
         </div>
         <div class="menu-image">
@@ -539,9 +550,9 @@
         <h2>Забронируйте столик или VIP-комнату
           прямо сейчас!</h2>
         <input type="text" class="booking-input" id="name_input">
-<!--        <div class="text-error">Введите ваше имя!</div>-->
+        <!--        <div class="text-error">Введите ваше имя!</div>-->
         <input type="text" class="booking-input" id="phone_input">
-<!--        <div class="text-error">Введите ваш телефон!</div>-->
+        <!--        <div class="text-error">Введите ваш телефон!</div>-->
         <button class="btn booking-btn" id="booking_btn">Забронировать</button>
         <div class="booking-info">*В течении 15 минут наш администратор свяжется
           с вами, чтобы подтвердить бронь стола или комнаты.
